--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 name: 谢冠岚的学习网站
-email: 690244957@163.com
+email: 690244957@qq.com
 author: 690244957
-url: https://161013088.github.io/
+url: https://690244957.github.io/
 resume_site: http://xiaokedada.com/me/
 github: https://github.com/690244957
 baseurl: ""  #根目录
