--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: 690244957
 url: https://690244957.github.io/
 resume_site: http://xiaokedada.com/me/
 github: https://github.com/690244957
-baseurl: ""  /根目录
+baseurl: ""  #根目录
 description: 唯有保持认真执着的赤子之心，方能走得更远。
 motto: 学海无涯
 #motto: 学海无涯
