--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ paginate: 8
 paginate_path: "page:num"
 gems: [jekyll-paginate]
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
-github_username: maoxiaoke
+github_username: 690244957
 highlighter: rouge
 markdown: kramdown
 FB:
