--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 
  - title: 信息可视化作品集
    url: /infovis/
-   excerpt: 一个关于运动品牌的信息可视化 
+   excerpt: 信息可视化的作品 
    image: navigation 1.gif
  
  
@@ -10,7 +10,7 @@
  
  - title: Web作品集
    url: /portfolio/
-   excerpt: 喜欢王者的可以点开我的这个网页
+   excerpt: 网页设计的作品
    image: navigation 2.gif
 
 
@@ -18,7 +18,7 @@
 
  - title: 学习笔记
    url: /posts/
-   excerpt: 网页制作与设计以及信息可视化的一点小笔记 
+   excerpt: 网页设计和信息可视化笔记心得
    image: navigation 3.gif 
    
  
@@ -26,5 +26,5 @@
  
  - title: 关于我
    url: /mine/
-   excerpt: 一点点个人资料，欢迎来撩 
+   excerpt: 个人资料
    image: navigation 4.gif 
