--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
 # Footer navigation links
 
-- title: 好好学习，天天向上
-  url: https://luojihao.github.io
+- title: 学海无涯
+  url: https://690244957.github.io/
